<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary" >

    <team16_3308.imageslide.ImagesScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/imagesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <View android:id="@+id/layoutCenter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"/>

            <ImageButton
                android:id="@+id/layoutLeftStart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignEnd="@id/layoutCenter"
                android:layout_alignParentStart="true"/>

            <ImageButton
                android:id="@+id/layoutRightStart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignStart="@id/layoutCenter"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </team16_3308.imageslide.ImagesScrollView>

    <ImageButton
        android:id="@+id/menuButton"
        android:onClick="menuButtonClick"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:src="@drawable/menu_icon"
        android:scaleType="fitCenter"
        android:background="@null" />

    <View
        android:id="@+id/outsideMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="outsideMenuClick" />

    <LinearLayout
        android:id="@+id/menuLayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_shadow">

        <Button
            android:id="@+id/button_imageSites"
            android:onClick="imageSitesButtonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Image Sites"
            android:textSize="17sp"
            android:textColor="@color/colorTextPrimary"
            android:textAllCaps="false"
            android:background="#00000000"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/button_settings"
            android:onClick="settingsButtonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Settings"
            android:textSize="17sp"
            android:textColor="@color/colorTextPrimary"
            android:textAllCaps="false"
            android:background="#00000000"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</FrameLayout>
